complete be